Bug 283545 OOM crash [@ nsFTPDirListingConv::OnDataAvailable] patch by b.jacques@planet.nl r=biesi sr=darin a=asa